<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">

    <RelativeLayout
        android:id="@+id/bar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/orange"
        android:padding="8dp">

        <ImageView
            android:id="@+id/ic_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="@drawable/ic_back"
            android:contentDescription="@null" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/about"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/ic_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/update"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:visibility="invisible"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="bottom|center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:contentDescription="@null"
            android:paddingLeft="48dp"
            android:paddingRight="48dp"
            android:scaleType="fitEnd"
            android:src="@drawable/bg_footer" />
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/footer"
        android:layout_below="@id/bar"
        android:shrinkColumns="1"
        android:gravity="center"
        android:padding="16dp">

        <TableRow
            android:layout_marginBottom="4dp"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_desc"
                android:textColor="@color/orange" />

            <TextView
                android:id="@+id/version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_app"
                android:textColor="@color/white" />
        </TableRow>

        <TableRow
            android:layout_marginBottom="4dp"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_company"
                android:textColor="@color/orange" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_company"
                android:textColor="@color/white" />
        </TableRow>

        <TableRow
            android:layout_marginBottom="4dp"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_support"
                android:textColor="@color/orange" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_support"
                android:textColor="@color/white" />
        </TableRow>

        <TableRow
            android:layout_marginBottom="4dp"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_copyright"
                android:textColor="@color/orange" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_copyright"
                android:textColor="@color/white" />
        </TableRow>

        <TableRow
            android:layout_marginBottom="4dp"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_contact"
                android:textColor="@color/orange" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_contact"
                android:textColor="@color/white" />
        </TableRow>

        <TableRow
            android:layout_marginBottom="4dp"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_phone"
                android:textColor="@color/orange" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_phone"
                android:textColor="@color/white" />
        </TableRow>

        <TableRow
            android:layout_marginBottom="4dp"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_weixin"
                android:textColor="@color/orange" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_weixin"
                android:textColor="@color/white" />
        </TableRow>

        <TableRow
            android:layout_marginBottom="4dp"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_weibo"
                android:textColor="@color/orange" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_weibo"
                android:textColor="@color/white" />
        </TableRow>

        <TextView
            android:id="@+id/service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autoLink="all"
            android:gravity="center"
            android:text="@string/label_serviceterm"
            android:textColor="@color/orange"
            android:textSize="16sp" />
    </TableLayout>
</RelativeLayout>