<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">
    <RelativeLayout
        android:id="@+id/bar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/orange"
        android:padding="8dp">

        <ImageView
            android:id="@+id/ic_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="@drawable/ic_back"
            android:contentDescription="@null" />

        <TextView
            android:id="@+id/floor_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:text="@string/fault_declare"/>

        <TextView
            android:id="@+id/ic_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:textSize="16sp"
            android:text="@string/record"/>
    </RelativeLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="48dp">
        <FrameLayout
            android:id="@+id/fl_lamp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_fault_lamp"
                    android:gravity="center"
                    android:padding="10dp"/>
                <AbsoluteLayout
                    android:id="@+id/led_canvas"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_above="@id/fault_desc"/>
                <EditText
                    android:id="@+id/fault_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minLines="4"
                    android:background="@null"
                    android:hint="@string/fault_hint"
                    android:padding="5dp"/>
                <TextView
                    android:id="@+id/tv_commit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/commit"
                    android:gravity="center"
                    android:padding="20dp"
                    android:background="@color/orange"
                    android:textSize="20sp"/>
            </LinearLayout>
        </FrameLayout>
        <FrameLayout
            android:id="@+id/fl_result"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">
                <ImageView
                    android:id="@+id/icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:src="@drawable/icon_commit_fault"/>
                <TextView
                    android:id="@+id/text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/icon"
                    android:layout_marginTop="10dp"
                    android:layout_centerHorizontal="true"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/commit_suc"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text"
                    android:layout_marginTop="20dp"
                    android:layout_centerHorizontal="true"
                    android:textSize="18sp"
                    android:text="@string/fault_declare_tips"/>
            </RelativeLayout>

        </FrameLayout>

    </FrameLayout>

</RelativeLayout>
