<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">
    <RelativeLayout
        android:id="@+id/bar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/orange"
        android:padding="8dp">

        <ImageView
            android:id="@+id/ic_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="@drawable/ic_back"
            android:contentDescription="@null" />

        <TextView
            android:id="@+id/floor_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:text="@string/fault_content"/>

        <TextView
            android:id="@+id/ic_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:textSize="16sp"
            android:text="@string/record"
            android:visibility="invisible"/>
    </RelativeLayout>
    <FrameLayout
        android:id="@+id/fl_lamp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/bar">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fault_lamps"
                android:gravity="center"
                android:padding="10dp"/>
            <AbsoluteLayout
                android:id="@+id/led_canvas"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>
            <EditText
                android:id="@+id/fault_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minLines="4"
                android:focusable="false"
                android:background="@null"
                android:hint="@string/fault_hint"
                android:padding="5dp"/>
        </LinearLayout>
    </FrameLayout>

</RelativeLayout>
