<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <RelativeLayout
        android:id="@+id/bar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/orange"
        android:padding="8dp">

        <ImageView
            android:id="@+id/ic_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/ic_back"
            android:contentDescription="@null" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/led_control"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/save"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/bar"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/inner"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_below="@id/bar"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical"
            android:padding="8dp">

            <cn.com.mod.office.lightman.widget.ImageButtonSwitch
                android:id="@+id/scene_switch"
                android:layout_width="140dp"
                android:layout_height="90dp" />

            <EditText
                android:id="@+id/name"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_edit"
                android:gravity="center"
                android:maxLength="12"
                android:singleLine="true"
                android:text="@string/default_scene_name"
                android:textColor="@color/black"
                android:textCursorDrawable="@null"
                android:textSize="15sp" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_below="@id/inner"
            android:layout_weight="1.5">

            <LinearLayout
                android:id="@+id/split"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tab1"
                    android:layout_width="0dp"
                    android:layout_height="32dp"
                    android:layout_weight="1"
                    android:background="@drawable/tab_select"
                    android:gravity="center"
                    android:text="@string/brightness"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tab2"
                    android:layout_width="0dp"
                    android:layout_height="32dp"
                    android:layout_weight="1"
                    android:background="@drawable/tab"
                    android:gravity="center"
                    android:text="@string/colortemp"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/tab3"
                    android:layout_width="0dp"
                    android:layout_height="32dp"
                    android:layout_weight="1"
                    android:background="@drawable/tab"
                    android:gravity="center"
                    android:text="@string/rgb"
                    android:textColor="@color/white" />

            </LinearLayout>

            <cn.com.mod.office.lightman.widget.HorizontalPager
                android:id="@+id/pager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/split" />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>